# never-miss-a-bill-again

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  alembic.ini  bills.csv  bills_export.csv  bills_overwrite.csv  docker-compose.yaml  nmba.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 4a90da7e0db8_initial_bills_table.py  50b6494939cc_remove_unique_constraint_from_config_key.py  85d7ba078009_change_due_date_to_due_day.py  db6b542a7134_add_config_table.py
nmba/: cli.py
nmba/data/: crud.py  database.py  migrations.py  models.py  schemas.py
nmba/notice/: notifications.py
tests/: test_cli_basic.py
