[project]
name = "never-miss-a-bill-again"
version = "1.5.0"
description = "Never miss a bill again"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy",
    "alembic",
    "apprise",
    "pydantic",
    "structlog",
    "typer",
    "rich",
    "click",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "python-semantic-release", "black"]

[tool.uv]
default-groups = []
package = true

[tool.pytest.ini_options]
pythonpath = [".", "nmba"]

[project.scripts]
nmba = "nmba.cli:app"

[tool.setuptools.packages.find]
include = ["nmba*"]
exclude = ["ARCHIVE*", "tests*", "build*"]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "refactor",
    "fix",
    "perf",
    "style",
    "docs",
    "ci",
    "test",
    "feat",
    ":boom:",
    "BREAKING_CHANGE",
]
major_tags = [":boom:", "BREAKING_CHANGE"]
minor_tags = ["feat"]
patch_tags = [
    "fix",
    "perf",
    "style",
    "docs",
    "ci",
    "test",
    "refactor",
    "chore",
    "build",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
dist_path = "dist/"
upload_to_vcs_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
